--- a/charts/oauth2-proxy-manifests/templates/deployment.yaml
+++ b/charts/oauth2-proxy-manifests/templates/deployment.yaml
@@ -65,8 +65,20 @@ spec:
       initContainers:
       - name: generate-oauth2-proxy-secret
         image: {{ .Values.global.cp.containerRegistry.url }}{{"/"}}{{ .Values.global.cp.containerRegistry.repository }}{{"/"}}{{ .Values.global.cp.initContainer.alpine.image.name }}:{{ .Values.global.cp.initContainer.alpine.image.tag }}
+        {{- if .Values.global.cp.cpCertificateSecret }}
+        command: [ "/bin/sh", "-c", "cat /tmp/certs/* > /etc/ssl/certs/ca-certificates.crt && source /etc/config/script/iat_to_clienid.sh && initialize" ]
+        {{- else }}
         command: [ "/bin/sh", "-c", "source /etc/config/script/iat_to_clienid.sh && initialize" ]
+        {{- end }}
         # command: [ "/bin/sh", "-c", "sleep 6400000" ]
+        {{- if .Values.securityContext }}
+        securityContext:
+          {{- toYaml .Values.securityContext | nindent 10 }}
+        {{- end }}
+        {{- if .Values.global.cp.generateOauth2ProxySecret.resources }}
+        resources:
+          {{- toYaml .Values.global.cp.generateOauth2ProxySecret.resources | nindent 10 }}
+        {{- end }}
         env:
           {{- with .Values.global.cp.proxy }}
           {{- if .httpProxy }}
@@ -83,21 +95,60 @@ spec:
           {{- end }}
           {{- end }}
         volumeMounts:
+        {{- if .Values.global.cp.cpCertificateSecret }}
+        - name: cp-certs
+          mountPath: /tmp/certs/
+        - name: custom-certs
+          mountPath: /etc/ssl/certs
+        {{- end }}
         - name: shell-script-volume
           mountPath: /etc/config/script/iat_to_clienid.sh
-          subPath: iat_to_clienid.sh            
+          subPath: iat_to_clienid.sh
       containers:
 {{- if (((.Values.global.cp).logging).fluentbit).enabled }}
       - name: fluentbit
         image: {{ .Values.global.cp.containerRegistry.url }}{{"/"}}{{ .Values.global.cp.containerRegistry.repository }}{{"/"}}{{ .Values.global.cp.logging.fluentbit.image.name }}:{{ .Values.global.cp.logging.fluentbit.image.tag }}
-        {{- if .Values.global.cp.logging.fluentbit.securityContext }}
+        {{- if .Values.securityContext }}
         securityContext:
-          {{- toYaml .Values.global.cp.logging.fluentbit.securityContext | nindent 10 }}
+          {{- toYaml .Values.securityContext | nindent 10 }}
         {{- end }}
         {{- if .Values.global.cp.logging.fluentbit.resources }}
         resources:
           {{- toYaml .Values.global.cp.logging.fluentbit.resources | nindent 10 }}
-        {{- end }}        
+        {{- end }}
+        ports:
+          - containerPort: 2020
+            protocol: TCP
+        startupProbe:
+          httpGet:
+            scheme: HTTP
+            path: /api/v1/health
+            port: 2020
+          initialDelaySeconds: 0
+          periodSeconds: 1
+          timeoutSeconds: 1
+          successThreshold: 1
+          failureThreshold: 50
+        livenessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /api/v1/health
+            port: 2020
+          periodSeconds: 10
+          timeoutSeconds: 2
+          initialDelaySeconds: 0
+          successThreshold: 1
+          failureThreshold: 1
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /api/v1/health
+            port: 2020
+          periodSeconds: 10
+          timeoutSeconds: 2
+          initialDelaySeconds: 0
+          successThreshold: 1
+          failureThreshold: 1
         env:
           - name: POD_NAMESPACE
             valueFrom:
@@ -126,8 +177,10 @@ spec:
               fieldRef:
                 fieldPath: status.podIP
         volumeMounts:
-          - name: podlogs
+          - name: logs
             mountPath: /var/log/pods
+          - name: db
+            mountPath: /var/log/db
           - name: dockercontainerlogs
             mountPath: /var/lib/docker/containers
           - name: config-volume
@@ -312,6 +365,10 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
+        {{- if .Values.global.cp.cpCertificateSecret }}
+        - name: cp-certs
+          mountPath: /etc/ssl/certs/
+        {{- end }}
 {{- with .Values.config.google }}
 {{- if and .adminEmail (or .serviceAccountJson .existingSecret) }}
         - name: google-secret
@@ -339,18 +396,27 @@ spec:
           name: {{ template "oauth2-proxy.fullname" . }}-htpasswd-file
           readOnly: true
 {{- end }}
+        - mountPath: /tmp/logs
+          name: logs
 {{- if ne (len .Values.extraVolumeMounts) 0 }}
 {{ toYaml .Values.extraVolumeMounts | indent 8 }}
 {{- end }}
-{{- if .Values.securityContext.enabled }}
-{{- $securityContext := unset .Values.securityContext "enabled" }}
+        {{- if .Values.securityContext }}
         securityContext:
-          {{- toYaml $securityContext | nindent 10 }}
-{{- end }}
+          {{- toYaml .Values.securityContext | nindent 10 }}
+        {{- end }}
 {{- if .Values.extraContainers }}
   {{- toYaml .Values.extraContainers | nindent 6 }}
 {{- end }}
       volumes:
+{{- if .Values.global.cp.cpCertificateSecret }}
+      - name: cp-certs
+        secret:
+          defaultMode: 420
+          secretName: {{ .Values.global.cp.cpCertificateSecret }}
+      - name: custom-certs
+        emptyDir: {}
+{{- end }}
 {{- with .Values.config.google }}
 {{- if and .adminEmail (or .serviceAccountJson .existingSecret) }}
       - name: google-secret
@@ -423,15 +489,13 @@ spec:
       - name: shell-script-volume
         configMap:
           name: {{ template "oauth2-proxy.fullname" . }}-shell-script-cm
+      - name: logs
+        emptyDir: {}
 {{- if (((.Values.global.cp).logging).fluentbit).enabled }}
-      - name: podlogs
-        hostPath:
-          path: /var/log/pods
-          type: Directory
+      - name: db
+        emptyDir: {}
       - name: dockercontainerlogs
-        hostPath:
-          path: /var/lib/docker/containers
-          type: DirectoryOrCreate
+        emptyDir: {}
       - name: config-volume
         configMap:
           name: {{ template "oauth2-proxy.fullname" . }}-fluentbit-config
