--- a/charts/oauth2-proxy-recipes/values.yaml
+++ b/charts/oauth2-proxy-recipes/values.yaml
@@ -9,10 +9,10 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for cp proxy, default is latest
-    version: "10.1.022"
-    tag: "v1.3.4"
+    version: "10.1.37"
+    tag: "v1.4.11"
     # Timestamp of capability release
-    releaseDate: "2024/08/02"
+    releaseDate: "2025/01/15"
     # Either a link to document or the document itself specifying _what was fixed in this release.
     releaseNotes: "Enhancements, Bug fixes, etc."
 
@@ -48,6 +48,7 @@ securityContext:
   # It specifies that privilege escalation is not allowed for security reasons.
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
   allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
   capabilities:
     drop:
       - ALL
