--- a/charts/tp-dp-monitor-agent/templates/fluentbit-configmap.yaml
+++ b/charts/tp-dp-monitor-agent/templates/fluentbit-configmap.yaml
@@ -16,6 +16,9 @@ data:
       Log_Level         info
       Daemon            off
       Parsers_File      parsers.conf
+      HTTP_Server       On
+      HTTP_Listen       0.0.0.0
+      HTTP_Port         2020
 
     @INCLUDE input.conf
     @INCLUDE filter.conf
@@ -25,9 +28,9 @@ data:
     [INPUT]
       Name              tail
       Tag               dp.${POD_NAMESPACE}.${POD_NAME}.${POD_ID}.${CONTAINER_NAME}
-      Path              /var/log/pods/${POD_NAMESPACE}_${POD_NAME}_${POD_ID}/${CONTAINER_NAME}/*.log
+      Path              /var/log/pods/*.log
+      DB                /var/log/db/flb_kube.db
       multiline.parser  docker, cri
-      DB                /var/log/flb_kube.db
       Mem_Buf_Limit     5MB
       Skip_Long_Lines   On
       Refresh_Interval  10
