--- a/charts/istio-istiod/values.yaml
+++ b/charts/istio-istiod/values.yaml
@@ -258,6 +258,7 @@ defaults:
       resources:
         serviceaccount:
           serviceAccountName:
+      enableResourceConstraints: true
       containerRegistry:
         url: "docker.io"
         secret: ""
