--- a/charts/tp-cp-servicemesh-recipes/templates/servicemesh.yaml
+++ b/charts/tp-cp-servicemesh-recipes/templates/servicemesh.yaml
@@ -141,9 +141,11 @@ spec:
         securityContext:
           {{- toYaml .Values.securityContext | nindent 10 }}
         {{- end }}
+        {{- if eq (include "tp-cp-servicemesh-recipes.enableResourceConstraints" . ) "true" }}
         {{- with .Values.resources }}
         resources:
           {{- toYaml . | nindent 10}}
+        {{- end }}
         {{- end }}
         env:
         - name: CAPABILITY_NAME
