--- a/charts/tp-cp-hawk-console-recipes/values.yaml
+++ b/charts/tp-cp-hawk-console-recipes/values.yaml
@@ -9,8 +9,8 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Helm chart version for hawk-console, default is latest
-    version: "1.3.0"
-    tag: "17"
+    version: "1.4.0"
+    tag: "30"
     # Timestamp of capability release
     releaseDate: "2024/02/22"
     # Either a link to document or the document itself specifying _what was fixed in this release.
@@ -40,6 +40,7 @@ podSecurityContext:
 securityContext:
   # It specifies that privilege escalation is not allowed for security reasons.
   # Additionally, it drops all capabilities, which is a common security practice to minimize potential risks.
+  readOnlyRootFilesystem: true
   allowPrivilegeEscalation: false
   capabilities:
     drop:
