--- a/charts/platform-base/values.yaml
+++ b/charts/platform-base/values.yaml
@@ -67,6 +67,10 @@ tp-cp-tibcohub-contrib:
 tp-cp-msg-contrib:
   enabled: true
 
+# Default values for tp-cp-msg-recipes.
+tp-cp-msg-recipes:
+  enabled: true
+
 # Default values for tp-cp-hawk.
 tp-cp-hawk:
   enabled: true
