--- a/charts/platform-base/Chart.yaml
+++ b/charts/platform-base/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-base
 description: TIBCO Platform base chart
 type: application
-version: 1.3.338
-appVersion: "1.3.0"
+version: 1.4.275
+appVersion: "1.4.0"
 keywords:
   - tibco-platform
   - platform
@@ -19,38 +19,42 @@ annotations:
   app.helm.sh/name: platform-base
 dependencies:
   - name: tp-cp-configuration
-    version: "1.3.18"
+    version: "1.4.5"
     repository: alias:tibco-platform
   - name: tp-cp-recipes
-    version: "1.3.165"
+    version: "1.4.149"
     repository: alias:tibco-platform
   - name: tp-cp-o11y
-    version: "1.3.19"
+    version: "1.4.14"
     repository: alias:tibco-platform
   - name: tp-cp-core
-    version: "1.3.8266"
+    version: "1.4.8578"
     repository: alias:tibco-platform
   - name: tp-cp-core-ops
-    version: "1.3.8266"
+    version: "1.4.8578"
     repository: alias:tibco-platform
   - name: tp-cp-core-finops
-    version: "1.3.442"
+    version: "1.4.512"
     repository: alias:tibco-platform
   - name: tp-cp-integration
-    version: "1.3.80"
+    version: "1.4.62"
     repository: alias:tibco-platform
     condition: tp-cp-integration.enabled
     tags:
       - integration
   - name: tp-cp-tibcohub-contrib
-    version: "1.3.5"
+    version: "1.4.5"
     repository: alias:tibco-platform
     condition: tp-cp-tibcohub-contrib.enabled
   - name: tp-cp-msg-contrib
-    version: "1.3.14"
+    version: "1.4.20"
     repository: alias:tibco-platform
     condition: tp-cp-msg-contrib.enabled
+  - name: tp-cp-msg-recipes
+    version: "1.4.20"
+    repository: alias:tibco-platform
+    condition: tp-cp-msg-recipes.enabled
   - name: tp-cp-hawk
-    version: "1.3.18"
+    version: "1.4.18"
     repository: alias:tibco-platform
     condition: tp-cp-hawk.enabled
